k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
        - name: fastapi-container
          image: kuchambiatud/fastapi-app:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8000
