k8s/ingress.yaml
# Ingress resource for FastAPI app
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress

spec:
  ingressClassName: traefik

  rules:
  - host: fastapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
